src/objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <picklist>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Flight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professionals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Items_Requested__c</fullName>
        <label>Items Requested</label>
        <summaryForeignKey>Requested_Product__c.Request_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantiy_Requested__c</fullName>
        <label>Quantiy Requested</label>
        <summarizedField>Requested_Product__c.Quantity__c</summarizedField>
        <summaryForeignKey>Requested_Product__c.Request_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <formula>IF( scr__c  = True, 
Customer__r.ShippingStreet  &amp;  
Customer__r.ShippingCity &amp;  
Customer__r.ShippingState &amp;  
Customer__r.ShippingCountry &amp; 
Customer__r.ShippingPostalCode 
,  Street__c &amp;  
City__c  &amp;  
State__c  &amp;  
Country__c  &amp;  
Postal_Code__c )</formula>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>For Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Return</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Express - 3 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal - 7 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overnight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special - Immediate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>scr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Customer Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RQ-{0000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Shipping_Address</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(AND( scr__c = False,  Street__c  &lt;&gt; Null,  City__c  &lt;&gt; Null,  State__c  &lt;&gt; Null,  Country__c  &lt;&gt; Null,  Postal_Code__c  &lt;&gt; Null))</errorConditionFormula>
        <errorMessage>Provide shipping address</errorMessage>
    </validationRules>
</CustomObject>